k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vac-hub-test
  namespace: grpc-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vac-hub-test
  template:
    metadata:
      labels:
        app: vac-hub-test
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: vac-hub-test-server
        image: "${REGION}-docker.pkg.dev/${PROJECT_ID}/grpc-test-repo/vac-hub-test:${IMAGE_TAG}"
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
          name: grpc
        # --- Prometheus 스크랩을 위한 포트 추가 ---
        - containerPort: 9464
          name: metrics
        resources:
          requests:
            cpu: "500m"      # 0.5 vCPU
            memory: "512Mi"  # 512 MB
          limits:
            cpu: "1"         # 1 vCPU
            memory: "1Gi"    # 1 GB
        readinessProbe:
          grpc:
            port: 50051
          initialDelaySeconds: 10 # 초기 시작 대기 시간 증가
          periodSeconds: 15     # 검사 주기 증가
          timeoutSeconds: 5       # 타임아웃 시간 증가
